<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_home"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_text"
        android:text="@string/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/bt_disc"
        android:text="@string/discoverable"
        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:background="#80ffffff"
        android:textColor="#ffffff"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_find_stop"
        android:text="@string/find_stop"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="fill_parent"
        android:background="#80ffffff"
        android:textColor="#ffffff"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/tv_select_a_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/select_device"
        android:visibility="gone"
        android:background="#666"
        android:textColor="#fff"
        android:padding="5dp" />

    <TextView android:id="@+id/title_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_paired_devices"
        android:visibility="visible"
        android:background="#666"
        android:textColor="#fff"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="5dp" />

    <ListView android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:background="#80ffffff" />

    <TextView android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_other_devices"
        android:visibility="gone"
        android:background="#666"
        android:textColor="#fff"
        android:padding="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <ListView android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_weight="1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:background="#80f4f4f4" />

</LinearLayout>